packages/hyperchad/template/tests/warnings/invalid-hex-color-empty.rs
use hyperchad_template::container;

fn main() {
    container! {
        div color=# { "Empty hex - invalid" }
    };
}
